# baky

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pr_body.md  .pr_body_10.md  .pr_body_30.md  .pr_body_9.md  .pre-commit-config.yaml  .ralphrc  .roadmap_body_updated.txt  .roadmap_tmp.txt  .roadmap_update.md  .roadmap_update_body.json  .update_roadmap.py  .update_roadmap_10.py  .update_roadmap_30.py  CLAUDE.md  Dockerfile  Makefile  README.md  autopilot.sh  compound-engineering.local.md  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  tailwind.config.js
.claude/: settings.json
.claude/skills/: autopilot.md  baky-status.md  design-page.md  new-model.md  new-view.md  next-issue.md  validate.md
.github/workflows/: ci.yml  deploy.yml
.ralph/: .loop_start_sha  AGENT.md  PROMPT.md  fix_plan.md  progress.json
apps/accounts/: admin.py  decorators.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/apartments/: admin.py  apps.py  models.py  signals.py  urls.py
apps/dashboard/: forms.py  tasks.py  urls.py  views.py
apps/inspections/: admin.py  apps.py  checklist_defaults.py  forms.py  models.py  signals.py  (+3 more)
baky/: admin_dashboard.py  asgi.py  context_processors.py  storage.py  tasks.py  urls.py  wsgi.py
requirements/: base.txt  local.txt  production.txt
templates/: base.html
tests/: conftest.py  factories.py  test_admin_dashboard.py  test_context_processors.py  test_gunicorn_config.py  test_health.py  test_production_settings.py  test_q_cluster.py  test_security.py  test_storage.py  test_tasks.py
(+227 files in other folders)
