[project]
name = "baky"
version = "0.1.0"
description = "Apartment monitoring & inspection platform for short-term rentals in Vienna"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".update_roadmap*.py", ".pr_body*.md", ".roadmap_*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "baky"]

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
max_attribute_length = 120
ignore = "H006,H021,H023,H030,H031,T003"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "baky.settings.local"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --reuse-db --tb=short"

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
